Don't live like a fucking corpse.

--- a/_posts/2022-7-17-CMU15445-project3-满分收获总结.md
+++ b/_posts/2022-7-17-CMU15445-project3-满分收获总结.md
@@ -23,9 +23,9 @@ tags:
 
 感觉这个lab更像一个读代码任务，文档只讲了需要实现的笼统需求，大部分跟下手代码相关的信息全在代码里面，需要从测试文件，Executor的构造函数等地方延申读各种头文件，理解了之后才能拿来使用且完成任务，问题是还不一定能用对。
 
-#### TASK #0 - BEFOR START
+### TASK #0 - BEFOR START
 
-##### ！！！gradescope究极大BUG！！！
+#### ！！！gradescope究极大BUG！！！
 
 上传评分的时候，自己的代码没有任何格式错误，也会在格式检查时失败：
 
@@ -38,7 +38,7 @@ tags:
 
 
 
-##### 开始之前
+#### 开始之前
 
 ```
 value，tuple，table，column，schema
@@ -56,7 +56,7 @@ value，tuple，table，column，schema
 
 
 
-##### AbstractExecutor
+#### AbstractExecutor
 
 SQL拆分成一棵执行树之后，其中的节点的功能承担者，也是这次实验主要要完成的部分。
 
@@ -77,7 +77,7 @@ virtual const Schema *GetOutputSchema() = 0;
 
 
 
-##### ExecutorContext
+#### ExecutorContext
 
 （AbstractExecutor构造函数的参数之一）
 
@@ -91,7 +91,7 @@ Catalog *catalog_;
 
 
 
-##### AbstractPlanNode
+#### AbstractPlanNode
 
 （AbstractExecutor构造函数参数之二）
 
@@ -120,7 +120,7 @@ AbstractExpression *GetPredicate()
 table_oid_t GetTableOid() 
 ```
 
-##### AbstractExpression
+#### AbstractExpression
 
 表达式类，一颗表达式树中的节点，比如比较，聚合，或者常量，column元素。其中column表达式也作为了column类的成员之一。
 
@@ -157,11 +157,11 @@ table_oid_t GetTableOid()
 
 
 
-##### Value
+#### Value
 
 （最小数据单位）
 
-##### Index
+#### Index
 
 索引保存的是`(Tuple_key, RID)`对，其中`Tuple_key`是根据传入的`Tuple`生成的。
 
@@ -169,9 +169,9 @@ table_oid_t GetTableOid()
 
 在会对table造成修改的executor中会用到，通过提供的函数在修改table'的时候顺便把对应的indx修改。
 
-##### 数据存储三剑客
+#### 数据存储三剑客
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/bb98edee1200490db976a143da7315fb.png)
-###### tuple
+##### tuple
 
 相当于表里面的一行，存储了一行`value`。长度由`shema`决定，每个`column`可以在`tuple`中对应一个`value`
 
@@ -200,7 +200,7 @@ std::string ToString(const Schema *schema) const;
 
 ```
 
-###### TableHeap
+##### TableHeap
 
  相当于一张表本身（represents a physical table on disk，just a doubly-linked list of pages.）
 
@@ -224,13 +224,13 @@ TableIterator End();
 
 ```
 
-###### TableIterator
+##### TableIterator
 
 TableHeap的迭代器（指针），指向的是其中的Tuple，即可以当作Tuple指针来用。
 
-##### 数据表信息三剑客
+#### 数据表信息三剑客
 ![](https://img-blog.csdnimg.cn/7ef083d7c2d24cda83acb2366be5468a.png)
-###### Catalog
+##### Catalog
 
 存储了一个数据库的全部表格信息的索引，提供了对表格的操作。
 
@@ -277,7 +277,7 @@ std::string table_name_;
 const size_t key_size_;
 ```
 
-###### schema
+##### schema
 
 模式。每列都有一个表头（名字），shema就是一组表头的集合，拿来指明这张表有哪些列或者某个executer需要处理哪些列。
 
@@ -299,7 +299,7 @@ inline uint32_t GetLength()
 inline bool IsInlined() const { return tuple_is_inlined_; }
 ```
 
-###### column
+##### column
 
 相当于一列的名字（表头），也能调用其expression完成对应的操作（前面在AbstractExpression中有说）
 
@@ -307,9 +307,9 @@ inline bool IsInlined() const { return tuple_is_inlined_; }
 std::string GetName()
 ```
 
-#### TASK #1 - EXECUTORS
+### TASK #1 - EXECUTORS
 
-##### SEQUENTIAL SCAN
+#### SEQUENTIAL SCAN
 
 *CPP问题*
 
@@ -352,7 +352,7 @@ for (const auto &column : plan_->OutputSchema()->GetColumns()) {
 
 
 
-##### INSERT
+#### INSERT
 
 根据我现在的理解，插入tuple更新索引时，只需要调用`exec_ctx->GetIndex()->index_->InsertEntry()`就行。
 
@@ -367,15 +367,15 @@ for (auto info : index_infos_) {
 }
 ```
 
-##### UPDATE
+#### UPDATE
 
 类似INSERT
 
-##### DELETE
+#### DELETE
 
 类似INSERT
 
-##### NESTED LOOP JOIN
+#### NESTED LOOP JOIN
 
 <u>*原理*</u>
 
@@ -408,7 +408,7 @@ for (uint32_t i = 0; i < plan_->OutputSchema()->GetColumnCount(); i++) {
 }
 ```
 
-##### HASH JOIN
+#### HASH JOIN
 
 <u>*原理*</u>
 
@@ -460,7 +460,7 @@ struct hash<bustub::JoinKey> {
 
 
 
-##### AGGREGATION
+#### AGGREGATION
 
 *<u>疑问</u>*
 
@@ -486,7 +486,7 @@ Value value = has_having_ ?
 
 
 
-##### LIMIT
+#### LIMIT
 
 这个简单的好笑了
 
@@ -501,7 +501,7 @@ bool LimitExecutor::Next(Tuple *tuple, RID *rid) {
 }
 ```
 
-##### DISTINCT
+#### DISTINCT
 
 直接照搬AGGREGATION的hash表实现，改个名字就行。
 
